# mamba

./: .appveyor.yml  .clang-format  .cmake-format.json  .flake8  .git-blame-ignore-revs  .gitattributes  .gitignore  .isort.cfg  .lcovrc  .markdownlint.yaml  .packit.yaml  .pre-commit-config.yaml  .readthedocs.yml  .travis.yml  CHANGELOG  CHANGELOG.md  CITATION.cff  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  CONTRIBUTING.rst  LICENSE  MANIFEST.in  README.md  SECURITY.md  Taskfile.dist.yml  _typos.toml  codecov.yml  compare_stubs.py  cpp_test.py  doc_linter.py  environment-dev.yml  environment-static-dev.yml  environment-unix.yml  environment-win.yml  interface.cpp  mambaConfig.cmake.in  pyproject.toml  releaser.py  setup.py  (+6 more)
experiment/: CMakeLists.txt  experiment.cpp  prog
experiments/: CMakeLists.txt  constants.hpp  context.hpp  package_cache_data.hpp  path.hpp  subdirdata.cpp
include/: CMakeLists.txt  activation.hpp  api.cpp  channel.hpp  common_write.c  conda.h  context.hpp  environment.hpp  environments_manager.hpp  fetch.hpp  filesystem.hpp  fsutil.hpp  graph_util.hpp  history.hpp  index.hpp  json_helper.hpp  link.hpp  match_spec.hpp  output.hpp  package_cache.hpp  package_handling.hpp  package_info.hpp  package_paths.hpp  parsing.cpp  parsing.hpp  path.hpp  pool.hpp  prefix_data.hpp  py_interface.cpp  query.hpp  repo.hpp  repo_conda.c  repo_conda.h  shell_init.hpp  solv_jsonparser.c  solv_jsonparser.h  solver.cpp  solver.hpp  subdirdata.hpp  thread_utils.hpp  (+7 more)
include/mamba/: activation.hpp  channel.hpp  config.hpp  configuration.hpp  context.hpp  create.hpp  environment.hpp  environments_manager.hpp  fetch.hpp  fsutil.hpp  history.hpp  info.hpp  install.hpp  link.hpp  list.hpp  mamba_fs.hpp  match_spec.hpp  output.hpp  package_cache.hpp  package_handling.hpp  package_info.hpp  pinning.hpp  pool.hpp  prefix_data.hpp  query.hpp  shell.hpp  shell_init.hpp  solver.hpp  subdirdata.hpp  thread_utils.hpp  transaction.hpp  transaction_context.hpp  update.hpp  url.hpp  util.hpp  validate.hpp  version.hpp  version.hpp.in  virtual_packages.hpp
libmamba/: CHANGELOG.md  CMakeLists.txt  environment-dev.yml  environment-static-dev-win.yml  environment-static-dev.yml  libmambaConfig.cmake.in
libmamba-spdlog/: CMakeLists.txt  libmamba-spdlogConfig.cmake.in
libmamba-spdlog/cmake/: libmamba-spdlogConfig.cmake.in
libmamba-spdlog/src/: libmamba_spdlog.cpp
libmamba-spdlog/tests/: CMakeLists.txt  test_logging_spdlog.cpp
libmamba/archive/: CMakeLists.txt
libmamba/benchmarks/: CMakeLists.txt
libmamba/common/: CMakeLists.txt
libmamba/data/: Mamba.psm1  _mamba_activate.bat  activate.bat  bin2header.py  compile_pyc.py  compile_pyc.py.hpp  conda_exe.hpp  mamba.bat  mamba.csh  mamba.fish  mamba.sh  mamba.xsh  mamba_completion.posix  mamba_hook.bat  mamba_hook.ps1  micromamba.bat  micromamba.csh  micromamba.sh
libmamba/network/: CMakeLists.txt
libmamba/solver/: CMakeLists.txt
libmamba/src/: version.cpp
libmamba/tests/: CMakeLists.txt  fcntl_nolock_shim.c  test_channel.cpp  test_configuration.cpp  test_cpp.cpp  test_data.hpp  test_env_file_reading.cpp  test_env_lockfile.cpp  test_environments_manager.cpp  test_error_handling.cpp  test_execution.cpp  test_filesystem.cpp  test_graph.cpp  test_invoke.cpp  test_lockfile.cpp  test_output.cpp  test_pinning.cpp  test_problems_explainer.cpp  test_problems_graph.cpp  test_progress_bar.cpp  test_property_graph.cpp  test_satisfiability_error.cpp  test_shell_init.cpp  test_string_methods.cpp  test_tasksync.cpp  test_thread_utils.cpp  test_transfer.cpp  test_union.cpp  test_url.cpp  test_util.cpp  test_util_cast.cpp  test_util_compare.cpp  test_util_graph.cpp  test_util_string.cpp  test_validate.cpp  test_virtual_packages.cpp
libmambapy/: .gitignore  CHANGELOG.md  CMakeLists.txt  MANIFEST.in  environment-dev.yml  pyproject.toml  setup.cfg  setup.py
libmambapy-stubs/: pyproject.toml  setup.py
libmambapy/bindings/: bind_utils.hpp  bindings.cpp  bindings.hpp  expected_caster.hpp  legacy.cpp  path_caster.hpp  solver.cpp  solver_libsolv.cpp  specs.cpp  utils.cpp  weakening_map_bind.hpp
libmambapy/common/: CMakeLists.txt  bindings_common.cpp
libmambapy/libmambapy/: __init__.py  __init__.pyi  _version.py
libmambapy/libmambapy-out/: ssolver-conflictss.gv
libmambapy/solver/: CMakeLists.txt  bindings_solver.cpp
libmambapy/src/: main.cpp  version.cpp
libmambapy/tests/: test_legacy.py  test_solver.py  test_solver_libsolv.py  test_specs.py  test_utils.py  test_version.py
mamba_archive/: CMakeLists.txt
mamba_archive/src/: archive.cpp  archive.hpp  main.cpp
mamba_package/: CMakeLists.txt
mamba_package/src/: main.cpp  package.cpp  package.hpp
micromamba/: CHANGELOG.md  CMakeLists.txt  LICENSE  condarc  environment-dev.yml  setup.cfg
micromamba/recipe/: build.sh  meta.yaml
micromamba/src/: activate.cpp  archive.cpp  clean.cpp  common_options.cpp  common_options.hpp  completer.bash  completer.cpp  completer.zsh  config.cpp  constructor.cpp  constructor.hpp  create.cpp  env.cpp  info.cpp  install.cpp  list.cpp  login.cpp  main.cpp  microserver.cpp  package.cpp  remove.cpp  repoquery.cpp  run.cpp  run.hpp  server.cpp  shell.cpp  umamba.cpp  umamba.hpp  update.cpp  version.cpp  version.hpp  version.hpp.tmpl
micromamba/test-server/: reposerver.py  testserver.sh  testserver_auth_pkg_signing.sh  (+1 more)
test/: CMakeLists.txt  explicit_env.txt  explicit_env_linux.txt  explicit_env_osx.txt  generate_gpg_keys.sh  original_history_data  repodata_a.json  repodata_b.json  reposerver.py  spec_file_1.txt  spec_file_2.txt  test.sh  test_activation.cpp  test_all.py  test_channel.cpp  test_config.cpp  test_configuration.cpp  test_cpp.cpp  test_env_file_reading.cpp  test_environments_manager.cpp  test_fetch.cpp  test_graph.cpp  test_history.cpp  test_lockfile.cpp  test_mamba_api.py  test_pinning.cpp  test_repoquery.py  test_shell_init.cpp  test_string_methods.cpp  test_thread_utils.cpp  test_transfer.cpp  test_url.cpp  test_validate.cpp  test_virtual_packages.cpp  test_zchunk.py  testserver.sh  update_env.yml  utils.py  yaml_env.yml
(+1174 files in other folders)
